--- a/game/styles/global.css
+++ b/game/styles/global.css
@@ -9,10 +9,17 @@ body{
     overflow: hidden;
 }
 
-.game-container {
+.code-container {
     position: relative;
     width: 400px;
     height: 200px;
+    margin: 20px;
+}
+
+.game-container {
+    position: relative;
+    width: calc(32px * 12);
+    height: calc(32px * 6);
     margin: 0 auto;
     outline: 1px solid #fff;
 
